--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-echo ".DS_Store" >> ~/.gitignore_global
-echo "._.DS_Store" >> ~/.gitignore_global
-echo "**/.DS_Store" >> ~/.gitignore_global
-echo "**/._.DS_Store" >> ~/.gitignore_global
-git config --global core.excludesfile ~/.gitignore_global
+.DS_Store
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
+.xcuserstate
