--- a/Practica/PracticaTAD/PracticaTAD.vcxproj
+++ b/Practica/PracticaTAD/PracticaTAD.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="PracticaTAD.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="SetImp.cpp" />
   </ItemGroup>
   <ItemGroup>
