--- a/Practica/PracticaTAD/PracticaTAD.vcxproj
+++ b/Practica/PracticaTAD/PracticaTAD.vcxproj
@@ -127,10 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DiccionarioImp.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SetImp.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Diccionario.h" />
+    <ClInclude Include="DiccionarioImp.h" />
     <ClInclude Include="Set.h" />
     <ClInclude Include="SetImp.h" />
   </ItemGroup>
