Trabaje en implementacion PilaInt, arreglar pop en PracticaTAD

--- a/Practica/PracticaTAD/PracticaTAD.vcxproj
+++ b/Practica/PracticaTAD/PracticaTAD.vcxproj
@@ -129,11 +129,13 @@
   <ItemGroup>
     <ClCompile Include="DiccionarioImp.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PilaIntImp.cpp" />
     <ClCompile Include="SetImp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Diccionario.h" />
     <ClInclude Include="DiccionarioImp.h" />
+    <ClInclude Include="PilaInt.h" />
     <ClInclude Include="Set.h" />
     <ClInclude Include="SetImp.h" />
   </ItemGroup>
